--- a/cisreg-GWAS_wf/cisreg-GWAS.Rmd
+++ b/cisreg-GWAS_wf/cisreg-GWAS.Rmd
@@ -1,5 +1,5 @@
 ---
-#knit: (function(inputFile, encoding = "UTF-8") { rmarkdown::render(inputFile, encoding = encoding, output_file = 'cisreg_GWAS_report2.html', output_dir = "cisreg_GWAS_report_2019-08") })
+# knit: (function(inputFile, encoding = encoding) { rmarkdown::render(inputFile, encoding = encoding, output_file = 'cisreg_GWAS_report2.html', output_dir = "~/cisreg-GWAS_results_2019-08") })
 title: "Detection of  regulatory SNPs in GWAS studies"
 author: 'Yvon Mbouamboua, Pascal Rihet, Thi-Thuy-Nga Nguyen, Andrew Parton, Aziz Khan & Jacques van Helden '
 date: "`r Sys.Date()`"
@@ -64,7 +64,7 @@ bibliography: bibliography.bib
 editor_options:
   chunk_output_type: console
 font-family: Garamond
-font-import: http://fonts.googleapis.com/css ?family=Risque
+font-import: http://fonts.googleapis.com/css?family=Risque
 csl: biomed-central.csl
 subtitle: Disease
 address: TAGC lab, Aix-Marseille Université, France
@@ -80,24 +80,23 @@ ptm <- proc.time()
 ```
 
 
-
-```{r parameters, echo=FALSE}
+```{r parameters, echo=FALSE, results=FALSE, warning=FALSE, message=FALSE}
 
 ## Define user-specified parameters for the analyses
 ## Parameters
 parameters <- list(
-  #query =  "EFO_0001068", # malaria
-  query =  "EFO_0008407", # tuberculosis
+  query =  "EFO_0001068", # malaria
+  # query =  "EFO_0008407", # tuberculosis
   # query = "HP_0100806", # sepsis
-  #query = "EFO_0000249", # Alzheimer's disease
-  #query = "EFO_0001360", # type ii diabetes mellitus
-  #query = "HP_0002014", # diarrhea
+  # query = "EFO_0000249", # Alzheimer's disease
+  # query = "EFO_0000692" # schizophrenia
+  # query = "EFO_0001360", # type ii diabetes mellitus
   trait = NA,
   ld.pop.prefix = "1000GENOMES:phase_3:",
   population = "EUR",  ## BEWARE, the population should be adapted to the query !
   # population = "AFR",  ## BEWARE, the population should be adapted to the query !
   working.dir = getwd(),
-  output.dir = "~/cisreg-GWAS_results",
+  output.dir = file.path(Sys.getenv("HOME"), "cisreg-GWAS_results"),
   r2 = 0.8,
   ld.distance = 200,
   max.ld.per.snp = 500, # ignore LDs for a given tag SNP if there are more too many of them
@@ -152,8 +151,6 @@ workflowSummary <- vector()
 ```
 
 
-
-
 ```{r knitr_setup, include=FALSE, size="huge"}
 message("Loading knitr library")
 if (!require("knitr", quietly = TRUE)) {
@@ -174,8 +171,8 @@ knitr::opts_chunk$set(
   ## Maybe related to these reported issue:
   ##     https://github.com/rstudio/rmarkdown/issues/429
   ##     https://github.com/rstudio/rmarkdown/issues/587
-  fig.path = "figures/",
-#  fig.path = file.path(parameters$figure.dir, paste0(parameters$query, "_")),
+#  fig.path = "figures/",
+  fig.path = file.path(parameters$figure.dir, paste0(parameters$query, "_")),
 #  fig.path = file.path("figures", paste0(parameters$query, "_")),
   size = "tiny", 
   warning = FALSE, 
@@ -212,9 +209,8 @@ cran.libraries.to.install <-
     "httr",
     "xml2",
     "RCurl",
-    "data.table",
-    # "gProfileR",
-    "DOSE"
+    "data.table"
+    # "gProfileR"
   )     
 
 
@@ -242,7 +238,8 @@ bioconductor.libraries.to.install <- c(
   "XGR",  ## For xEnrichSNPs and related graph representations
   #"FunciSNP",
   "TissueEnrich",
-  "grImport2"
+  "grImport2",
+  "DOSE"
 )
 
 message("Loading Bioconductor libraries")
@@ -631,11 +628,11 @@ studiesPerSNP <- as.data.frame.table(sort(table(gwas.results$SNPS), decreasing =
 names(studiesPerSNP) <- c("SNP", "N")
 
 ## Select the SNPs with an "rs" IDs
-rsID <- as.vector(
+rsIDs <- as.vector(
   grep(pattern = '^rs\\d+',
        studiesPerSNP$SNP, 
        perl = TRUE, value = TRUE))
-nb.rsID <- length(unique(rsID))
+nb.rsIDs <- length(unique(rsIDs))
 
 
 ## Summarize the results obtained so far
@@ -645,7 +642,7 @@ workflowSummary <- append(workflowSummary, c(
 #  "Non-redundant SNPs" = nrow(studiesPerSNP),
   "SNPs demonstrated by >1 studies" = nrow(subset(studiesPerSNP, N > 1)),
   "SNPs demonstrated by 1 study" = nrow(subset(studiesPerSNP, N == 1)),
-  "SNPs with rsID" = nb.rsID)
+  "SNPs with rsID" = nb.rsIDs)
 )
 
 ## Print the summmary
@@ -699,11 +696,11 @@ workflowSummary["valid rsIDs for BioMart"] <- nb.valid.DA.snp.ID
 
 
 
-```{r da_snps_barplot, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". **A. ** Disease-associated SNPs per chromosome. **B. ** Genomic context of disease-associated SNPs from GWAS catalog.** "), out.width="50%", fig.width=6, fig.height=8}
+```{r da_snps_barplot, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),"**. **A. ** Disease-associated SNPs per chromosome. **B. ** Genomic context of disease-associated SNPs from GWAS catalog.** "), out.width="100%", fig.width=8, fig.height=6}
 
 par(mfrow = c(1,2)) 
-par.ori <- par(no.readonly = TRUE)
-par(mar = c(5.1, 5.1, 3.1, 2.1))
+#par.ori <- par(no.readonly = TRUE)
+par(mar = c(5.1, 8, 9.1, 1.1))
 ## Draw a barplot with the number of disease-associated SNPs per chromosome
 barplot(height = sort(table(DA.snpInfo$chr_name), decreasing = FALSE), 
         #main = "Disease-associated SNPs per chromosome",
@@ -715,10 +712,6 @@ barplot(height = sort(table(DA.snpInfo$chr_name), decreasing = FALSE),
         col = "#BBDDFF",
         cex.names = 0.7, 
         las = 1)
-
-## Draw a barplot with the number of SNPs by genomic context
-## assign all the SNPs without documented consequence type to the "unknown" class
-tagSNPsInfo$CONTEXT[tagSNPsInfo$CONTEXT == ""] <- "unknown"
 
 df <- sort(table(tagSNPsInfo$CONTEXT),  decreasing = FALSE)
 max.context <- length(df)
@@ -748,7 +741,7 @@ We used the [Ensembl REST API](http://rest.ensembl.org/documentation/info/ld_id_
 
 
 ```{r linkage_desiquilibrium}
-
+  
 message("Getting LD SNPs from Ensembl for ", length(valid.DA.snp.ID), " disease-associated SNPs. ")
 
 ## Instantiate the data frame for LD SNPs and a vector of IDs
@@ -757,17 +750,20 @@ LDsnpIDs <- vector()
 # LdSNPstats <- data.frame()
 ldGroups <- list()
   
-i <- 0 ## Instantiate counter
-for (rsID in valid.DA.snp.ID) {
-  i <- i + 1
+# i <- 0 ## Instantiate counter
+# for (current.rsID in valid.DA.snp.ID) {
+#  i <- i + 1
+i <- 1 ## Instantiate counter
+for (i in 1:length(valid.DA.snp.ID)) {
+  current.rsID <- valid.DA.snp.ID[i]
   
   ## Generate the URL to address a query to ENSEMBL via their REST interface
-  ldURL <- paste(sep = "", 
-                 "http://rest.ensembl.org/ld/human/", rsID, "/",
+  ldURL <- paste0("http://rest.ensembl.org/ld/human/", current.rsID, "/",
                  parameters$ld.pop.prefix, parameters$population,
                  "?content-type=application/json",
                  "&r2=", parameters$r2, 
                  "&window_size=", as.character(parameters$ld.distance))
+  message("\t\t", ldURL)
 
   newLdSNPs <- fromJSON(ldURL, simplifyDataFrame = TRUE, flatten = TRUE)
   
@@ -791,18 +787,18 @@ for (rsID in valid.DA.snp.ID) {
   ## Add the DA SNP to the LD SNPs with correlation of 1
   # LdSNPs <- rbind(LdSNPs, 
   #                 data.frame(
-  #                   variation1 = rsID,
-  #                   variation2 = rsID,
+  #                   variation1 = current.rsID,
+  #                   variation2 = current.rsID,
   #                   r2 = 1,
   #                   d_prime = 1,
   #                   population = parameters$population
   #                 ))
   
-  ldGroups[[rsID]] <- c(rsID, as.vector(currentLdSNPs$variation2))
+  ldGroups[[current.rsID]] <- c(current.rsID, as.vector(currentLdSNPs$variation2))
   
 #   ## This is a auick hacky solution; zill need to be updated
 #   variationURL <- paste(sep = "", 
-#                  "http://rest.ensembl.org/variation/human/", rsID,
+#                  "http://rest.ensembl.org/variation/human/", current.rsID,
 #                  "?content-type=application/json")
 #   newVqrSNPs <- fromJSON(variationURL, simplifyDataFrame = TRUE)
 #   names(newVqrSNPs)
@@ -811,22 +807,23 @@ for (rsID in valid.DA.snp.ID) {
   # View(ldSNPs)
   nbNewSNPIDs <- length(newLdSNpIDs)
   if (nbNewSNPIDs > parameters$max.ld.per.snp) {
-    message("\t\tWarning: number of LD for tag SNP ", rsID, " (", nbNewSNPIDs,
+    message("\t\tWarning: number of LD for tag SNP ", current.rsID, " (", nbNewSNPIDs,
             ") exceeds limit (", parameters$max.ld.per.snp, "). ",
             "\n\tLD SNPs are ignored for this Tag SNP. ")
   } else if (length(newLdSNpIDs) > 0) {
     LDsnpIDs <- append(LDsnpIDs, newLdSNpIDs)
   }
   message("\tDA SNP", 
+          "\t", format(Sys.time(), "%X"), 
           "\t", i, "/", nb.valid.DA.snp.ID, 
-           "\t", rsID, 
+           "\t", current.rsID, 
           "\t", nbNewSNPIDs, " LD SNPs",
-          "\tCurrent total: ", length(LDsnpIDs))
+          "\tTotal: ", length(LDsnpIDs))
 
   # ## Add info on the number of LD SNPs to the table describing DA SNPs
   # LdSNPstats <- rbind(LdSNPstats,
   #                     data.frame(
-  #                       rsID = rsID,
+  #                       rsID = current.rsID,
   #                       LD.SNPs = nbNewSNPIDs,
   #                       cumLD.SNPs = length(LDsnpIDs)
   #                     ))
@@ -864,7 +861,7 @@ kable(head(LdSNPs), caption = paste0(
 
 
 
-```{r ld_snp_plot, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". SNPs in linkage disequilibrium (LD).** "), out.width = "40%", fig.width=5, fig.height=8}
+```{r ld_snp_plot, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". SNPs in linkage disequilibrium (LD).** "), out.width = "60%", fig.width=5, fig.height=8}
 
 # Draw a barplot of SNPs in LD
 nb.ld.snps <- sort(table(as.vector(LdSNPs$variation1)))
@@ -937,30 +934,28 @@ snpInfo <- snpInfo[!duplicated(snpInfo$refsnp_id),]
 
 ```{r DA_LD_SNPs, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Genomic context of disease-associated (DA) SNPs and LD SNPs.** "), out.width = "80%", fig.width=8, fig.height=4.5}
 
-## Barplot of genomic context of DA and LD SNPs
-## assign all the SNPs without documented consequence type to the "unknown" class
+# Barplot of genomic context of DA and LD SNPs
 snpInfo$consequence_type_tv[snpInfo$consequence_type_tv == ""] <- "unknown"
 
 # barplot(sort(table(snpInfo$consequence_type_tv), decreasing = TRUE),
 #         #main = "Genomic context of DA and LD SNPs",
 #         las=2, cex.names = 0.7, col = "#207DC2", xlab="", ylab="Number of SNPs",)
 
-#Barplot of genomic context of DA-SNPs
-ld.df <- sort(table(snpInfo$consequence_type_tv),  decreasing = FALSE)
-max.context <- length(ld.df)
-x <- barplot(height = ld.df,
-        #main = "Disease-associated SNPs per chromosome",
-        xlim = c(0, max(ld.df)*1.1),
-        cex.axis = 1,
-        main = "B",
-        xlab = "SNPs",
-        cex.lab = 1,
-        horiz = T, 
-        col = "#006699",
-        cex.names = 1, 
-        las = 1)
-text(x = ld.df[1:max.context], y = x, labels = ld.df[1:max.context], cex = 0.7, pos = 4)
+# Create a data frame
+Context <- snpInfo$consequence_type_tv
+DA.df <- data.frame(sort(table(Context), decreasing = FALSE))
 
+## Make the frequencies numbers (rather than factors)
+DA.df$Freq <- as.numeric(as.character(DA.df$Freq))
+
+#Barplot of genomic context of DA-SNPs
+ggplot(data = DA.df, aes(x = Context, y = Freq)) +
+  geom_bar(stat = "identity", fill = "#999966", color = "black") +
+  geom_text(aes(label = Freq), vjust = -0.1, hjust = -0.5, size = 4) +
+  xlab("Genomic context") +
+  ylab("Frequency") +
+  theme_test() +
+  coord_flip()
 
 
 ```
@@ -1012,7 +1007,7 @@ SOIsBed.gr <- with(SOIsBed,
                             strand   = Rle("*"), rsid = snp))
 
 
-## Export rsID of SOIs in txt format
+## Export rsIDs of SOIs in txt format
 outfiles["SOI IDs (txt)"] <- file.path(
   result.dir.path["SOIs"], 
   paste(sep = "", parameters$query, "_SOI_IDs", ".txt"))
@@ -1057,7 +1052,7 @@ write.table(x = SOIs,
 
 
 
-```{r genomic_context_of_SOIs, out.width = "100%", fig.width=8, fig.height=10, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Genomic feature of the SNPs of Interest (SOIs)** **A. ** Number of the SOIs per chromosome. **B. ** Genomic context of the SOIs, which  were selected by discarding all SNPs in conding regions (e.g. synonymous_variant, missense_variant).")}
+```{r genomic_context_of_SOIs, out.width = "100%", fig.width=8, fig.height=10, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Genomic features of the SNPs of Interest (SOIs)** **A. ** Number of the SOIs per chromosome. **B. ** Genomic context of the SOIs, which  were selected by discarding all SNPs in conding regions (e.g. synonymous_variant, missense_variant).")}
 par(mfrow = c(2,2)) 
 par.ori <- par(no.readonly = TRUE)
 par(mar = c(5.1, 5.1, 3.1, 2.1))
@@ -1076,7 +1071,7 @@ barplot(height = sort(table(snpInfo$chr_name), decreasing = FALSE),
 
 ## Barplot with the distribution of SNPs in different types 
 ## of genomic regions  ("consequence type")
-par(mar = c(5.1, 10.1, 3.1, 2.1))
+par(mar = c(5.1, 13.1, 3.1, 2.1))
 ld.df <- sort(table(snpInfo$consequence_type_tv),  decreasing = FALSE)
 max.context <- length(ld.df)
 x <- barplot(height = ld.df,
@@ -1108,7 +1103,7 @@ barplot(height = sort(table(SOIs$chr_name), decreasing = FALSE),
 
 ## Barplot with the distribution of SNPs in different types 
 ## of genomic regions  ("consequence type")
-par(mar = c(5.1, 10.1, 3.1, 2.1))
+par(mar = c(5.1, 13.1, 3.1, 2.1))
 soi.df <- sort(table(SOIs$consequence_type_tv),  decreasing = FALSE)
 max.context <- length(soi.df)
 x <- barplot(height = soi.df,
@@ -1131,7 +1126,7 @@ text(x = soi.df[1:max.context], y = x, labels = soi.df[1:max.context], cex = 0.7
 
 ## LD groups
 
-We compute the coordinates of each LD groups
+We compute the coordinates of each LD group.s
 
 
 ```{r haplotype_block, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Number of SNPs in LD per SOI.** "), out.width = "100%", fig.width=9, fig.height=4.5}
@@ -1265,7 +1260,7 @@ plot(ldGroup.info$nb.SNPs, ldGroup.info$size/1000,
      xlab = "SNPs per LD block", ylab = "LD block size (kb)",
      panel.first = grid())
 
-#dim(ldGroup.info)
+
 ## Draw a barplot with the number of SNPs per LD block (one block per DA SNP)
 ldGroup.snpNb <- ldGroup.info$nb.SNPs
 names(ldGroup.snpNb) <- ldGroup.info$DA.SNP
@@ -1482,6 +1477,7 @@ if (parameters$RSAT.rest) {
           outfiles["RSAT retrieve-variation-seq (varSeq)"])
 
   #### RSAT variation-scan ####
+  stop("RSAT variation-scan seems to have a problem. Please submit the analysis via thee web site")
   
   ## Build the API request for Variation-scan and submit it
   message("Scanning variant alleles with motifs via RSAT REST services")
@@ -1653,25 +1649,25 @@ if (max.motifs > length(SNPs.per.motif)) {
   par(mfrow = c(1,2))  
   par(mar = c(9.1, 5.1, 4.1, 2.1))
   barplot(SNPs.per.motif,
-          main = "A. variation-scan\nSNPs per motif",
+          main = "variation-scan\nSNPs per motif",
           xlab = "Number of predicted rSNPs",
           ylab = "Motif rank",
           las = 2, names = 1:length(SNPs.per.motif),
           col = "#37A3F3", border = "#05245F",
-          horiz = FALSE)
+          horiz = TRUE)
 } else {
   par(mfrow = c(1,1)) 
 }
 
 ## Plot the SNPs per motif for the top-ranking motifs only, in order to see the labels
-par(mar = c(9.1, 5.1, 4.1, 2.1))
+par(mar = c(9.1, 8.1, 4.1, 2.1))
 barplot(SNPs.per.motif[1:max.motifs],
-        main = "B. variation-scan\nTop-ranking motifs",
-        ylab = "Number of predicted rSNPs",
-        xlab = NA,
+        main = "SNPs per mmotif\nTop-ranking motifs",
+        xlab = "Number of predicted rSNPs",
+        ylab = NA,
         las = 2, cex.names = 0.8, 
         col = "#37A3F3", border = "#05245F",
-        horiz = FALSE)
+        horiz = TRUE)
 par(mar = c(5.1, 5/1, 4.1, 2.1))
 par(mfrow = c(1,1))
 ```
@@ -1856,9 +1852,6 @@ remap.SOI.overlaps <- data.frame(IntersectBed(remapCatalog.gr, SOIsBed.gr))
 nbremap.SOI.overlaps <- nrow(remap.SOI.overlaps)
 message("Number of overlaps between SOIs and ReMap peaks: ", nbremap.SOI.overlaps)
 workflowSummary["ReMap: overlaps between SOIs and ReMap peaks"] <- nbremap.SOI.overlaps
-nb.SOI.remap <- length(unique(remap.SOI.overlaps$rsid))
-workflowSummary["ReMap: co-localized SOIs with ChIP-seq peak"] <-
-  nb.SOI.remap
 
 ## Split the ReMap peakset ID in order to obtain separate columns with the
 ## 1. GEO series
@@ -2292,16 +2285,6 @@ write.table(x = varscan.with.peaks,
               col.names = TRUE)
 # system(paste("open", result.dir.path["rSNPs"]))
 
-
-# A subset of candidate rSNPs
-candidate.rSNPs <- varscan.with.peaks[, c("seqnames", "var_id", "best_variant",  "worst_variant", "X.ac_motif", "remap.tf.name", "pval_ratio")]
-
-write.table(x = candidate.rSNPs,
-              file = outfiles["candidate rSNPs"],
-              quote = FALSE,
-              sep = "\t",
-              row.names = FALSE,
-              col.names = TRUE)
 ```
 
 
@@ -2378,7 +2361,7 @@ kable(head(rSNPs.info.display), caption = "Predicted regulatory SNPs")
 
 We using `ChIPseeker` R package to annotate the ChIP-seq peaks co-localised with the rSNPs. We presente the genomic annotations of the ChIP-seq paeks co-localised with the rSNPs
 
-```{r peak_annotation_rSNPs, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1)," Annotation of the location of a given peak in terms of genomic features.** "), out.width = "80%", fig.width=8, fig.height=4.5}
+```{r peak_annotation_rSNPs, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Pieplot of genomic annotation. Annotation of the location of a given peak in terms of genomic features.** "), out.width = "80%", fig.width=8, fig.height=4.5}
 
 if (nrow(rSNPs.info) == 0) {
   message("The merging between RSAT variation-scan and ReMap ChIP-seq peaks did not return a single predicted rSNP. Skipping peak annotations. ")
@@ -2442,7 +2425,7 @@ if (nrow(rSNPs.info) == 0) {
   
   
   A <- ggplot(motif.alt.effect, aes(label, var_id)) + geom_tile(aes(fill = best_pval),
-                                                                colour = "white") + scale_fill_gradient(low = "orange",
+                                                                colour = "white") + scale_fill_gradient(low = "white",
                                                                                                         high = "steelblue")+
     labs(x='', y = '')+
     theme_bw()+
@@ -2582,7 +2565,7 @@ if (nrow(varscan.with.peaks) == 0) {
   B <- ggplot(data=tissue, aes(x=Tissue, y=N, fill=name)) +
     geom_bar(stat="identity", position=position_dodge(), color="black") +
     theme_bw() +
-    labs(x='tissue/cell', y = 'Frequency')+
+    labs(x='Tissue', y = 'Frequency')+
     guides(fill = guide_legend(title = "TFs"))+
     theme(legend.title = element_text(size=10),
           legend.text = element_text(size=8))+
@@ -2799,7 +2782,7 @@ if (nrow(rSNPs.info) == 0) {
 
 
 
-## Result symmary
+## Result summary
 
 ```{r result_summary}
 
@@ -2807,19 +2790,6 @@ kable(as.data.frame(workflowSummary),
       caption = "Summary of the results.",
       col.names = "Results")
 
-
- write.table(x = as.data.frame(workflowSummary))
- 
- 
- outfiles["GWAS-SNP associations (REST)"] <- file.path(
-    result.dir.path["Ensembl"],
-    paste(sep = "", parameters$query, "_gwas-catalog_REST", ".tsv"))
-  
- 
- table1 <- as.data.frame(workflowSummary)
- 
-  write.table(x = table1, file = outfiles["GWAS-SNP associations (REST)"] , 
-              quote = FALSE, row.names = TRUE, col.names = TRUE, sep = "\t")
 ```
 
 
